Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-9597

sanity-quota test_33: 'Used space for project 1000:18432, expected:20480'

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.10.1, Lustre 2.11.0
    • Lustre 2.10.0, Lustre 2.11.0
    • None
    • 3
    • 9223372036854775807

      This issue was created by maloo for Niu Yawei <yawei.niu@intel.com>

      This issue relates to the following test suite run: https://testing.hpdd.intel.com/test_sets/834ddd66-472e-11e7-b3fe-5254006e85c2.

      The sub-test test_33 failed with the following error:

      Used space for project 1000:14336, expected:20480
      

      Please provide additional information about the failure here.

      Info required for matching: sanity-quota 33

            wangshilong Wang Shilong (Inactive)
            maloo Maloo
            Votes:
            0 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved: